# ferrite

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml
.cargo-husky/hooks/: commit-msg  pre-commit
.claude/: settings.local.json
.github/: release-please-config.json
.github/workflows/: ci.yml  commit-lint.yml  pages.yml  release-artifacts.yml  release-please.yml
assets/: README.md  default.petstate  esheep.json
benches/: animation.rs  render.rs  surfaces.rs
crates/ferrite-core/: Cargo.toml
crates/ferrite-core/assets/: test_pet.json
crates/ferrite-core/src/: geometry.rs  lib.rs  version.rs
crates/ferrite-core/src/config/: mod.rs
crates/ferrite-core/src/sprite/: animation.rs  collision.rs  editor_state.rs  mod.rs  sheet.rs  sm_compiler.rs  sm_expr.rs  sm_runner.rs
crates/ferrite-egui/: Cargo.toml
crates/ferrite-egui/src/: app_window.rs  config_panel.rs  gallery.rs  lib.rs  sm_editor.rs  sm_highlighter.rs  sm_storage.rs  sprite_editor.rs  ui_theme.rs
crates/ferrite-web/: Cargo.toml  Dioxus.toml  index.html  input.css  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
crates/ferrite-web/e2e/: canvas.spec.ts  guides.spec.ts  home.spec.ts  nav.spec.ts  not-found.spec.ts
crates/ferrite-web/guides/: configuration.md  custom-sprites.md  getting-started.md  state-machines.md
crates/ferrite-web/public/assets/: tailwind.css
crates/ferrite-web/scripts/: test.js
crates/ferrite-web/src/: app.rs  lib.rs  main.rs
crates/ferrite-web/src/components/: footer.rs  mod.rs  nav.rs  pet_canvas.rs
crates/ferrite-web/src/pages/: guide_index.rs  guide_page.rs  home.rs  mod.rs
crates/ferrite-web/src/pet/: loop_.rs  mod.rs  renderer.rs  state.rs  surfaces.rs
crates/ferrite-webapp/: Cargo.toml  Trunk.toml  build.sh  index.html
crates/ferrite-webapp/src/: app.rs  bridge.rs  config_store.rs  import_export.rs  lib.rs  simulation.rs  web_storage.rs
docs/: backlog.md  dev.md
docs/superpowers/plans/: 2026-03-16-config-dialog-redesign.md  2026-03-17-live-config-and-arrows-sprite.md  2026-03-17-sprite-editor.md  2026-03-18-egui-migration.md  2026-03-19-performance-optimization.md  2026-03-19-ui-polish.md  2026-03-23-sm-asset-pipeline.md  2026-03-23-sm-core-engine.md  2026-03-23-sm-editor-ui.md  2026-03-24-unified-app-window.md  2026-03-31-ferrite-web-e2e.md  2026-04-01-sprite-tag-mapping-ui.md  2026-04-03-pet-collision.md  2026-04-05-sprite-baseline-offset.md  2026-04-06-webapp.md  2026-04-07-webapp-backlog.md  2026-04-07-webapp-pr-a.md  2026-04-09-b22-b23-b24.md  2026-04-14-core-computation-centralization.md  2026-04-15-engine-cleanup-b1-b4.md  2026-04-15-web-touch-and-guides.md  backlog-engine-cleanup.md
docs/superpowers/specs/: 2026-03-16-config-dialog-redesign.md  2026-03-17-egui-migration.md  2026-03-17-live-config-and-arrows-sprite.md  2026-03-17-sprite-editor.md  2026-03-19-performance-optimization.md  2026-03-19-ui-polish-design.md  2026-03-23-user-defined-state-machines.md  2026-03-31-ferrite-web-e2e-design.md  2026-04-01-sm-import-per-pet-switching-design.md  2026-04-01-sprite-tag-mapping-ui-design.md  2026-04-01-web-surface-detection-design.md  2026-04-03-pet-collision-design.md  2026-04-05-sprite-baseline-offset-design.md  2026-04-06-webapp-design.md  2026-04-09-b22-b23-b24-design.md  2026-04-14-pet-geom-design.md  2026-04-15-web-touch-and-guides.md
examples/: generate_test_fixture.rs
src/: app.rs  bundle.rs  event.rs  lib.rs  main.rs  version.rs
src/assets/: mod.rs
src/config/: dialog_state.rs  mod.rs  schema.rs  watcher.rs
src/sprite/: animation.rs  behavior.rs  editor_state.rs  mod.rs  sheet.rs  sm_compiler.rs  sm_expr.rs  sm_format.rs  sm_gallery.rs  sm_runner.rs  sprite_gallery.rs
src/tray/: app_window.rs  config_window.rs  mod.rs  sm_editor.rs  sm_highlighter.rs  sprite_editor.rs  ui_theme.rs  window_lifecycle.rs
src/window/: blender.rs  mod.rs  pet_window.rs  sprite_gallery.rs  surfaces.rs  wndproc.rs
tests/: e2e.rs  integration.rs
tests/e2e/: test_animation_e2e.rs  test_config_dialog_e2e.rs  test_config_e2e.rs  test_drag_e2e.rs  test_interaction_e2e.rs  test_surfaces_e2e.rs  test_ui_kittest.rs
tests/integration/: test_animation.rs  test_behavior.rs  test_collision.rs  test_config_roundtrip.rs  test_float_scale.rs  test_hot_reload.rs  test_sm_gallery_delete.rs  test_sm_switching.rs  test_sm_vars.rs  test_sprite_editor.rs  test_sprite_gallery.rs  test_sprite_gallery_delete.rs  test_sprite_parsing.rs  test_stress.rs  test_window_creation.rs  test_window_state.rs
tests/webapp/: package-lock.json  package.json  playwright.config.ts
tests/webapp/fixtures/: test_bundle.petbundle
tests/webapp/scripts/: capture-screenshots.ts
tests/webapp/specs/: debug_aria.spec.ts  import_export.spec.ts  smoke.spec.ts  state.spec.ts  visual.spec.ts
