[package]
name = "my-pet"
version = "0.1.0"
edition = "2024"

[lib]
name = "my_pet"
path = "src/lib.rs"

[[bin]]
name = "my-pet"
path = "src/main.rs"

[dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"
tray-icon = "0.21"
muda = "0.17"
notify = "6"
crossbeam-channel = "0.5"
once_cell = "1"
rust-embed = "8"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
