[workspace]
members  = [".", "crates/ferrite-core", "crates/ferrite-egui", "crates/ferrite-web", "crates/ferrite-webapp"]
resolver = "2"

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "1"
anyhow     = "1"
log        = "0.4"
once_cell  = "1"
image      = { version = "0.25", default-features = false, features = ["png"] }
zip        = "2"
crossbeam-channel = "0.5"

[package]
name = "ferrite"
version = "0.2.0"
edition = "2024"

[lib]
name = "ferrite"
path = "src/lib.rs"

[[bin]]
name = "ferrite"
path = "src/main.rs"

[dependencies]
ferrite-core = { path = "crates/ferrite-core" }
ferrite-egui = { path = "crates/ferrite-egui" }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
] }
image      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
anyhow     = { workspace = true }
tray-icon = "0.21"
muda = "0.17"
notify = "6"
crossbeam-channel = { workspace = true }
once_cell  = { workspace = true }
rust-embed = "8"
log        = { workspace = true }
env_logger = "0.11"
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts", "wgpu", "accesskit",
] }
# Explicitly enable wgpu backends — eframe pulls wgpu with default-features=false
# so no backends compile in unless we force them here via feature unification.
wgpu = { version = "27", features = ["dx12", "vulkan"] }
rfd = "0.17"
zip = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
egui_kittest = "0.33"

[[bench]]
name = "surfaces"
harness = false

[[bench]]
name = "render"
harness = false

[[bench]]
name = "animation"
harness = false

[profile.release]
opt-level = 3  # was "s" — speed over size
lto = true
strip = true

[profile.dev.package."*"]
opt-level = 2
