[package]
name    = "ferrite-core"
version = "0.1.0"
edition = "2024"

[dependencies]
image      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
anyhow     = { workspace = true }
log        = { workspace = true }
once_cell  = { workspace = true }
