[package]
name    = "ferrite-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
ferrite-core      = { path = "../ferrite-core" }
egui              = "0.33"
eframe            = { version = "0.33", default-features = false, features = ["default_fonts"] }
image             = { workspace = true }
serde             = { workspace = true }
anyhow            = { workspace = true }
log               = { workspace = true }
rfd               = "0.17"
crossbeam-channel = "0.5"
zip               = { workspace = true }

# dev-dependencies: egui_kittest omitted — egui-winit 0.33.3 has a compile error
# (missing accesskit_update field). Panel tests covered by Playwright E2E instead.
