[package]
name    = "ferrite-web"
version = "0.1.0"
edition = "2024"

[lib]
name = "ferrite_web"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ferrite-web"
path = "src/main.rs"

[dependencies]
ferrite-core         = { path = "../ferrite-core" }
dioxus               = { version = "0.6", features = ["web"] }
dioxus-router        = "0.6"
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "HtmlImageElement",
    "CanvasRenderingContext2d", "Performance",
] }
js-sys       = "0.3"
serde        = { workspace = true }
serde_json   = { workspace = true }
log          = { workspace = true }
console_log  = "1"
once_cell    = { workspace = true }
gloo-net     = { version = "0.5", features = ["http"] }
toml         = { workspace = true }
