[package]
name    = "ferrite-webapp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ferrite-core = { path = "../ferrite-core" }
ferrite-egui = { path = "../ferrite-egui" }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts", "glow", "accesskit",
] }
egui         = "0.33"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys      = { version = "0.3", features = [
    "Window", "Storage", "Document", "HtmlAnchorElement",
    "Blob", "BlobPropertyBag", "Url",
] }
js-sys       = "0.3"
log          = { workspace = true }
console_log  = "1"
console_error_panic_hook = "0.1"
serde        = { workspace = true }
anyhow       = { workspace = true }
rfd          = "0.17"
image        = { workspace = true }
toml         = { workspace = true }
